--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ body{
     width: 50px;
     height: 200px;
     border: 2px solid black;
+    border-top: 0px;
     border-radius: 0 0  10px 10px;
     margin: 10px;
     display: flex;
     flex-direction: column-reverse;
     overflow: hidden;
     margin-top: 20px;
-    border-top: nones;
 }
 
 .water{
