--- a/style.css
+++ b/style.css
@@ -1,59 +1,60 @@
-body{
-    background-color:antiquewhite;
+body {
+    background-color: rgb(223, 206, 227);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     height: 100vh;
-    border: 1px dashed blue;
+    border: 1px dashed rgb(169, 87, 4);
     border-radius: 20px;
     margin: 50px;
-}
-
-.game-area{
+  }
+  
+  .game-area {
     width: 80%;
     border-radius: 10px;
-    padding:20px;
+    padding: 20px;
     margin: 5px;
-}
-
-#game-info{
-    background-color:burlywood;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-#controls{
-    background-color:darkgrey;
-}
-
-#game-container{
-    background-color:gainsboro;
+  }
+  
+  #game-info {
+    background-color: rgb(193, 235, 224);
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  
+  #controls {
+    background-color: rgb(235, 240, 219);
+  }
+  
+  #game-container {
+    background-color: rgb(244, 248, 228);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
-}
-
-.tube{
+  }
+  
+  .tube {
     width: 50px;
     height: 200px;
     border: 2px solid black;
     border-top: 0px;
-    border-radius: 0 0  10px 10px;
+    border-radius: 0 0 10px 10px;
     margin: 10px;
     display: flex;
     flex-direction: column-reverse;
     overflow: hidden;
     margin-top: 20px;
-}
-
-.water{
+  }
+  
+  .water {
     width: 100%;
-}
-
-.tube.selected{
-    border-color: 'red';
+  }
+  
+  .tube.selected {
+    border-color: "red";
     box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
     transform: translateY(-20px);
-}
+  }
